--- a/meeting-bingo.html
+++ b/meeting-bingo.html
@@ -264,24 +264,11 @@
 
     <script>
         const meetingPhrases = [
-            "일단 해보죠", "그거 좀 더 디테일하게", "싱크 맞춰서", "빠르게 가보죠",
-            "데드라인이 언제죠?", "이거 누가 해요?", "시간 관계상", "다음에 논의하죠",
-            "간단하게 정리하면", "좀 더 심플하게", "아, 그거요?", "확인해보고 연락드릴게요",
-            "공유 부탁드려요", "이슈가 뭐죠?", "우선순위가 어떻게?", "리소스가 부족해서",
-            "팔로우업 할게요", "액션아이템 정리", "스케줄 조정", "결론부터 말하면",
-            "트래픽 어떤가요?", "퍼포먼스는?", "사용자 반응은?", "일정 타이트해서",
-            "담당자 연결해드릴게요", "검토 후 회신", "내부적으로 논의", "상위 보고 필요",
-            "예산 관련해서", "기획 단계에서", "개발 일정은?", "테스트는 언제?",
-            "런칭 준비됐나요?", "피드백 반영해서", "개선 방안은?", "문제없죠?",
-            "확인차 여쭤보는데", "혹시 가능한가요?", "어떻게 생각하세요?", "의견 있으시면",
-            "정확한 스펙은?", "요구사항 정리", "범위가 어디까지?", "예외사항은?",
-            "협업 방식은?", "커뮤니케이션 채널", "진행상황 공유", "중간 점검",
-            "최종 확인", "승인 필요한 부분", "검수 완료되면", "배포 일정",
-            "사전 작업", "후속 조치", "연관된 작업", "dependencies",
-            "임팩트 분석", "리스크 요소", "대안책은?", "플랜 B",
-            "벤치마킹 결과", "경쟁사 동향", "시장 반응", "트렌드 분석",
-            "노니하시죠", "조율하시죠", "통계적으로", "객관적 지표",
-            "사용자 관점에서", "비즈니스 측면", "기술적 이슈", "운영 관련"
+            "조심스럽게 접근해야", "매출에 도움이 되나요", "문의드립니다🙏", "매출 목표",
+            "목표가 뭔가요", "목적이 뭔가요", "시간 관계상", "KPI가 어떻게 되죠",
+            "객단가", "회의 가시죠", "확인해보고 연락드릴게요", "공유 부탁드려요",
+            "내일까지 가능하실까요", "리소스가 부족해서", "팔로우업 할게요", "액션아이템 정리",
+            "노니하시죠", "조율하시죠", "3주 전에 알려주셔야 합니다", "어떻게 생각하세요?"
         ];
 
         let currentBoard = [];
