--- a/meeting-bingo.html
+++ b/meeting-bingo.html
@@ -272,9 +272,9 @@
         const meetingPhrases = [
             "조심스럽게 접근해야", "매출에 도움이 되나요", "문의드립니다🙏", "매출 목표",
             "목표가 뭔가요", "목적이 뭔가요", "시간 관계상", "KPI가 어떻게 되죠",
-            "객단가", "회의 가시죠", "확인해보고 연락드릴게요", "공유 부탁드려요",
-            "내일까지 가능하실까요", "리소스가 부족해서", "팔로우업 할게요", "액션아이템 정리",
-            "노니하시죠", "조율하시죠", "3주 전에 알려주셔야 합니다", "어떻게 생각하세요?"
+            "객단가", "회의 가시죠", "확인해보고 연락드릴게요", "스터디하시죠",
+            "내일까지 가능하실까요", "리소스가 부족해서", "공유해주시죠", "액션아이템 정리",
+            "노니하시죠", "조율하시죠", "3주 전에 알려주셔야 합니다"
         ];
 
         let currentBoard = [];
