--- a/meeting-bingo.html
+++ b/meeting-bingo.html
@@ -238,14 +238,14 @@
     <div class="container">
         <div class="header">
             <img src="https://i.imgur.com/EPQTCHV.png" alt="로고" class="logo">
-            <h1>🎯 회의 빙고 게임</h1>
-            <p class="subtitle">지금 회의 중 나오는 단골 표현들을 체크해보세요!</p>
+            <h1>회의 빙고 게임</h1>
+            <p class="subtitle">회의 중 나오는 단골 표현들을 체크해보세요!</p>
         </div>
 
         <div class="controls">
-            <button onclick="generateNewBoard()">🎲 새 게임</button>
-            <button onclick="resetBoard()">🔄 리셋</button>
-            <button onclick="autoCheck()">🤖 자동 체크 (테스트용)</button>
+            <button onclick="generateNewBoard()">새 회의</button>
+            <button onclick="resetBoard()">리셋</button>
+            <button onclick="autoCheck()">자동 체크 (테스트용)</button>
         </div>
 
         <div class="bingo-board" id="bingoBoard"></div>
@@ -273,8 +273,8 @@
             "조심스럽게 접근해야", "매출에 도움이 되나요", "문의드립니다🙏", "매출 목표",
             "목표가 뭔가요", "목적이 뭔가요", "시간 관계상", "KPI가 어떻게 되죠",
             "객단가", "회의 가시죠", "디테일하게", "스터디하시죠",
-            "내일까지 가능하실까요", "리소스가 부족해서", "공유해주시죠", "많이 아쉬운 부분",
-            "노니하시죠", "조율하시죠", "3주 전에 알려주셔야 합니다"
+            "내일까지 가능하실까요", "리소스가 부족해서", "공유 부탁드려요", "많이 아쉬운 부분",
+            "노니하시죠", "조율하시죠", "3주 전에 알려주셔야 합니다" "논의 후 조율하시죠"
         ];
 
         let currentBoard = [];
