--- a/meeting-bingo.html
+++ b/meeting-bingo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회의 빙고 게임</title>
+    <title>OGQ 회의 빙고 게임</title>
     <style>
         * {
             margin: 0;
