--- a/bingo.html
+++ b/bingo.html
@@ -274,7 +274,7 @@
             "목표가 뭔가요", "목적이 뭔가요", "시간 관계상", "KPI가 어떻게 되죠",
             "객단가", "회의 가시죠", "디테일하게", "스터디하시죠",
             "내일까지 가능하실까요", "리소스가 부족해서", "공유 부탁드려요", "많이 아쉬운 부분",
-            "노니하시죠", "조율하시죠", "3주 전에 알려주셔야 합니다" "논의 후 조율하시죠"
+            "노니하시죠", "조율하시죠", "3주 전에 알려주셔야 합니다"
         ];
 
         let currentBoard = [];
