--- a/lunch_roulette.html
+++ b/lunch_roulette.html
@@ -19,21 +19,21 @@
     <div class="max-w-4xl mx-auto p-6">
         <!-- 헤더 -->
         <header class="text-center mb-8">
-            <h1 class="text-4xl font-bold text-gray-800 mb-2">🎯 점심 메뉴 룰렛</h1>
-            <p class="text-gray-600">오늘 점심 뭐 먹을지 고민되나요? 룰렛을 돌려보세요!</p>
+            <h1 class="text-4xl font-bold text-gray-800 mb-2">오늘 뭐 먹지?</h1>
+            <p class="text-gray-600">회사 오기 전부터 이 생각만 했지만 정작 점심시간 되면 못 정하겠을 때 돌리는 룰렛</p>
         </header>
 
         <!-- 탭 네비게이션 -->
         <div class="flex justify-center mb-8">
             <div class="bg-white rounded-lg shadow-lg p-2 flex">
                 <button onclick="showTab('roulette')" id="tab-roulette" class="px-6 py-2 rounded-md font-medium transition-colors bg-blue-500 text-white">
-                    🎯 룰렛
+                    룰렛
                 </button>
                 <button onclick="showTab('restaurants')" id="tab-restaurants" class="px-6 py-2 rounded-md font-medium transition-colors text-gray-600 hover:bg-gray-100">
-                    🍽️ 맛집 목록
+                    맛집 목록
                 </button>
                 <button onclick="showTab('rankings')" id="tab-rankings" class="px-6 py-2 rounded-md font-medium transition-colors text-gray-600 hover:bg-gray-100">
-                    🏆 인기 순위
+                    인기 순위
                 </button>
             </div>
         </div>
