--- a/ogqbingo.html
+++ b/ogqbingo.html
@@ -272,7 +272,7 @@
         const meetingPhrases = [
             "조심스럽게 접근해야", "매출에 도움이 되나요", "문의드립니다🙏", "매출 목표",
             "목표가 뭔가요", "목적이 뭔가요", "시간 관계상", "KPI가 어떻게 되죠",
-            "감단가", "회의 가시죠", "디테일하게", "스터디하시죠",
+            "객단가", "회의 가시죠", "디테일하게", "스터디하시죠",
             "내일까지 가능하실까요", "리소스가 부족해서", "공유해주시죠", "많이 아쉬운 부분",
             "노니하시죠", "조율하시죠", "3주 전에 알려주셔야 합니다"
         ];
