--- a/ogqbingo.html
+++ b/ogqbingo.html
@@ -274,8 +274,8 @@
             "목표가 뭔가요", "목적이 뭔가요", "시간 관계상", "KPI가 어떻게 되죠",
             "객단가", "회의 가시죠", "디테일하게", "스터디하시죠",
             "내일까지 가능하실까요", "리소스가 부족해서", "공유해주시죠", "많이 아쉬운 부분",
-            "노니하시죠", "조율하시죠", "3주 전에 알려주셔야 합니다", "방향성 논의"
-            "기술적 이슈", "사용자 관점에서", "대표님 승인", "내부적으로 논의"
+            "노니하시죠", "조율하시죠", "3주 전에 알려주셔야 합니다", "방향성 논의",
+            "기술적 이슈", "사용자 관점에서", "대표님 승인", "내부적으로 논의",
             "빠르게 가보죠", "확인해보고 연락드릴게요", "결론부터 말하면", "다음 회의가 있어서"
         ];
 
