--- a/ogqbingo.html
+++ b/ogqbingo.html
@@ -276,7 +276,8 @@
             "내일까지 가능하실까요", "리소스가 부족해서", "공유해주시죠", "많이 아쉬운 부분",
             "노니하시죠", "조율하시죠", "3주 전에 알려주셔야 합니다", "방향성 논의",
             "기술적 이슈", "사용자 관점에서", "대표님 승인", "내부적으로 논의",
-            "빠르게 가보죠", "확인해보고 연락드릴게요", "결론부터 말하면", "다음 회의가 있어서"
+            "빠르게 가보죠", "확인해보고 연락드릴게요", "결론부터 말하면", "다음 회의가 있어서",
+            "개발 일정이 꽉 차서"
         ];
 
         let currentBoard = [];
